[package]
name = "bincode-grpc-macro"
description = "proc macros for the bincode-grpc crate"
license = "AGPL-3.0-or-later"
version = "0.5.2"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
heck = "0.3"
proc-macro-crate = "0.1"