[package]
name = "bincode-grpc"
version = "0.1.0"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode-grpc-macro = { path = "../bincode-grpc-macro" }
grpcio = { version = "0.6.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
bytes = "0.5"
tracing = "0.1"
futures = "0.3"