[package]
name = "example-service"
version = "0.1.0"
authors = ["Xiangru Lian <admin@mail.xrlian.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode-grpc = { path = "../bincode-grpc" }
serde = { version = "1.0", features = ["derive"] }
grpcio = "0.6"
futures = "0.3"
smol = "0.4"
